<resources>
    <string name="app_name">MamaBot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="child_care_library">Child Care Library</string>
    <string name="chat_room">Chat room</string>
    <string name="favourites">Favourites</string>
    <string name="pediatric_hospitals">Pediatric Hospitals</string>
    <string name="making_motherhood_easier">Making motherhood easier</string>
    <string name="mamabot">MAMABOT</string>
    <string name="image_two">image two</string>
    <string name="image">image</string>
    <string name="image_three">image three</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="desc">nurse picture</string>
    <string name="descr">user account icon</string>
    <string name="bf1">Breastfeeding: the first few days</string>
    <string name="bf2">Your breastfeeding questions answered</string>
    <string name="bf3">Expressing and storing breast milk</string>
    <string name="bf4">Breastfeeding your premature baby</string>
    <string name="bf5">How to stop breastfeeding</string>
    <string name="bf6">Breastfeeding problems</string>
    <string name="bf7">Bottle feeding advice</string>
    <string name="bf8">How to change your babys nappy</string>
    <string name="bf9">First aid kit for babies</string>
    <string name="bf10">What you will need for your baby</string>
    <string name="bf11">Washing and bathing your baby</string>
    <string name="bf12">How to help a choking child</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
</resources>
