<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ask"
            android:icon="@drawable/chat"
            android:title="@string/ask_a_question" />
        <item
            android:id="@+id/child_care"
            android:icon="@mipmap/ic_info_black_24dp"
            android:title="@string/child_care_library" />
        <item
            android:id="@+id/chat"
            android:icon="@mipmap/ic_forum_white_24dp"
            android:title="Chat Room" />
        <item
            android:id="@+id/fav"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/favourites" />
        <item
            android:id="@+id/map"
            android:icon="@mipmap/ic_room_black_24dp"
            android:title="@string/pediatric_hospitals" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/log_out"
            android:title="Log Out" />


    </group>



</menu>
