<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wit.android.mamabot.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corners"
                android:onClick="askQuestion"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="2.5dp"
                android:padding="20dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginLeft="2.5dp" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/image"
                    android:src="@mipmap/ic_chat_bubble_white_48dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5px"
                    android:text="@string/ask_a_question"
                    android:textColor="@android:color/white"
                    android:textSize="22.5sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:background="@drawable/rounded_blue"
                android:onClick="readArticles"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:padding="20dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginLeft="2.5dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingTop="5px"
                    android:contentDescription="@string/image_two"
                    android:src="@mipmap/ic_info_white_48dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child_care_library"
                    android:textColor="@android:color/white"
                    android:textSize="22.5sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:onClick="goChat"
                android:orientation="horizontal"
                android:background="@drawable/rounded_green"
                android:layout_marginTop="2.5dp"
                android:padding="20dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginLeft="2.5dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/image_three"
                    android:src="@mipmap/ic_forum_white_48dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:paddingTop="5px"
                    android:text="@string/chat_room"
                    android:textColor="@android:color/white"
                    android:textSize="22.5sp"/>

            </LinearLayout>
        </LinearLayout>



    </ScrollView>


</LinearLayout>
